--- a/code/app/src/main/res/layout/fragment_place_list.xml
+++ b/code/app/src/main/res/layout/fragment_place_list.xml
@@ -15,17 +15,77 @@
         android:layout_height="match_parent"
         tools:context="com.maicondcastro.findfood.places.placelist.PlaceListFragment">
 
+        <TextView
+            android:id="@+id/label_distance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_medium"
+            android:text="@string/max_distance"
+            app:layout_constraintBottom_toBottomOf="@id/distance_edit_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/distance_edit_text" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/distance_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_small"
+            android:layout_marginTop="@dimen/spacing_medium"
+            android:layout_marginEnd="@dimen/spacing_small"
+            android:gravity="center"
+            android:inputType="number"
+            android:text="@={viewModel.maxDistance}"
+            app:layout_constraintEnd_toStartOf="@id/update_button"
+            app:layout_constraintStart_toEndOf="@id/label_distance"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="500" />
+
+        <Button
+            android:id="@+id/update_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing_medium"
+            android:text="@string/update"
+            app:layout_constraintBottom_toBottomOf="@id/distance_edit_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/distance_edit_text" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/saved_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/spacing_medium"
             android:liveData="@{viewModel.places}"
+            android:layout_marginTop="@dimen/spacing_medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/distance_edit_text"
             tools:listitem="@layout/place_item" />
+
+        <TextView
+            android:id="@+id/noDataTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
+            android:gravity="center"
+            android:text="@string/no_data"
+            android:textSize="@dimen/text_size_large"
+            app:drawableTopCompat="@drawable/ic_no_data"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
