--- a/code/app/src/main/res/navigation/nav_graph.xml
+++ b/code/app/src/main/res/navigation/nav_graph.xml
@@ -34,5 +34,11 @@
         <argument
             android:name="placeId"
             app:argType="string" />
+        <argument
+            android:name="lat"
+            app:argType="float" />
+        <argument
+            android:name="lng"
+            app:argType="float" />
     </fragment>
 </navigation>
