--- a/code/app/src/main/res/values/dimens.xml
+++ b/code/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="text_size_normal">16sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="text_size_large">18sp</dimen>
+    <dimen name="text_size_larger">21sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 </resources>
