--- a/code/app/src/main/res/xml-land/motion_detail.xml
+++ b/code/app/src/main/res/xml-land/motion_detail.xml
@@ -50,8 +50,9 @@
             android:id="@+id/card"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/map"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/spacing_medium"
+            app:layout_constraintBottom_toTopOf="@id/follow_place_button"
+            app:layout_constraintEnd_toStartOf="@id/location_map"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <Constraint
@@ -62,8 +63,8 @@
             android:layout_marginBottom="@dimen/spacing_medium"
             app:layout_constraintBottom_toTopOf="@id/follow_place_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card" />
+            app:layout_constraintStart_toEndOf="@id/card"
+            app:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/follow_place_button"
             android:layout_width="0dp"
